[project]
name = "litellm-retry-wrapper"
version = "0.1.0"
description = "A robust Python wrapper for LiteLLM with retry mechanisms, rate limiting, and error handling"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Sanjeed" },
]
keywords = ["litellm", "llm", "retry", "rate-limiting", "api-wrapper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "litellm>=1.61.1",
    "ratelimit>=2.2.1",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/sanjeed5/litellm-retry-wrapper"
Repository = "https://github.com/sanjeed5/litellm-retry-wrapper.git"
"Bug Tracker" = "https://github.com/sanjeed5/litellm-retry-wrapper/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.black]
line-length = 88
target-version = ["py311"]
