[project]
name = "litellm-retry-wrapper"
version = "0.1.0"
description = "A robust wrapper for LiteLLM with retry logic and rate limiting"
authors = [
    { name = "Sanjeed", email = "hi@sanjeed.in" }
]
dependencies = [
    "litellm>=1.0.0",
    "tenacity>=8.0.0",
    "ratelimit>=2.2.1"
]
requires-python = ">=3.8"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["litellm", "retry", "rate-limiting", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/sanjeed5/litellm-retry-wrapper"
Repository = "https://github.com/sanjeed5/litellm-retry-wrapper"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["litellm_retry_wrapper"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.black]
line-length = 88
target-version = ["py311"]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]
